--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-<h1>2023年节假日倒数日</h1>
+<h1>2025年节假日倒数日</h1>
 <table>
     <thead>
     <tr>
@@ -57,37 +57,37 @@
     <tbody>
     <tr>
         <td>元旦</td>
-        <td>2023年1月1日</td>
+        <td>2025年1月1日</td>
         <td><span id="countdown1" class="countdown"></span></td>
     </tr>
     <tr>
         <td>春节</td>
-        <td>2023年2月10日</td>
+        <td>2025年2月4日至2月10日</td>
         <td><span id="countdown2" class="countdown"></span></td>
     </tr>
     <tr>
         <td>清明节</td>
-        <td>2023年4月4日</td>
+        <td>2025年4月4日</td>
         <td><span id="countdown3" class="countdown"></span></td>
     </tr>
     <tr>
         <td>劳动节</td>
-        <td>2023年5月1日</td>
+        <td>2025年5月1日</td>
         <td><span id="countdown4" class="countdown"></span></td>
     </tr>
     <tr>
         <td>端午节</td>
-        <td>2023年6月1日</td>
+        <td>2025年6月8日</td>
         <td><span id="countdown5" class="countdown"></span></td>
     </tr>
     <tr>
         <td>中秋节</td>
-        <td>2023年9月22日</td>
+        <td>2025年9月22日</td>
         <td><span id="countdown6" class="countdown"></span></td>
     </tr>
     <tr>
         <td>国庆节</td>
-        <td>2023年10月1日</td>
+        <td>2025年10月1日至10月7日</td>
         <td><span id="countdown7" class="countdown"></span></td>
     </tr>
     </tbody>
@@ -106,20 +106,21 @@
 
             document.getElementById(id).innerHTML = days + "天";
 
-            if            (distance < 0) {
+            if (distance < 0) {
                 clearInterval(x);
                 document.getElementById(id).innerHTML = "已过期";
             }
         }, 1000);
     }
 
-    countdown("Jan 1, 2023", "countdown1");
-    countdown("Feb 10, 2023", "countdown2");
-    countdown("Apr 4, 2023", "countdown3");
-    countdown("May 1, 2023", "countdown4");
-    countdown("Jun 1, 2023", "countdown5");
-    countdown("Sep 22, 2023", "countdown6");
-    countdown("Oct 1, 2023", "countdown7");
+    // 更新为2025年的函数调用
+    countdown("Jan 1, 2025", "countdown1");
+    countdown("Feb 4, 2025", "countdown2"); // 使用春节假期开始日期
+    countdown("Apr 4, 2025", "countdown3");
+    countdown("May 1, 2025", "countdown4");
+    countdown("Jun 8, 2025", "countdown5");
+    countdown("Sep 22, 2025", "countdown6");
+    countdown("Oct 1, 2025", "countdown7"); // 使用国庆假期开始日期
 </script>
 </body>
 </html>
